# parallel_quick_sorter

./: CMakeLists.txt  README.md
include/: lomuto_partition.hpp  quickSort.h  quickSort.hpp  thread_safe_stack.hpp
sources/: demo.cpp
